# si

./: .gitignore  README.md
zad1/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  consts.hpp  dataProviders.cpp  dataProviders.hpp  factory.cpp  factory.hpp  machine.cpp  machine.hpp  zad1.cpp
